force-app/main/default/objects/SOA_Log__c/SOA_Log__c.object-meta.xml
<CustomObject>
    <description>Finance Center: audit log of Statement of Account sends — who (CreatedBy), for whom, when, and the outcome. Written by SOAEmailService on every send attempt (single and bulk).</description>
    <label>SOA Log</label>
    <nameField>
        <displayFormat>SOA-{000000}</displayFormat>
        <label>SOA Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOA Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>