force-app/main/default/objects/SOA_Log__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True when the email was accepted for delivery.</description>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>