force-app/main/default/objects/SOA_Log__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SOA Logs</relationshipLabel>
    <relationshipName>SOA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>