force-app/main/default/objects/SOA_Log__c/fields/Result__c.field-meta.xml
<CustomField>
    <fullName>Result__c</fullName>
    <description>Outcome of the send attempt (the Success/Error message from SOAEmailService).</description>
    <label>Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>