force-app/main/default/objects/SOA_Log__c/fields/Sent_To__c.field-meta.xml
<CustomField>
    <fullName>Sent_To__c</fullName>
    <description>Customer email address the SOA went to.</description>
    <label>Sent To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>