force-app/main/default/objects/SOA_Log__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>SOA Logs</relationshipLabel>
    <relationshipName>SOA_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>